@@ -1,4 +1,5 @@
 Adminer dev:
+MySQL: Display converting function for binary, bit or geometry fields
 MySQL: Display default values of binary columns
 MySQL: Allow setting default values of json column
 MariaDB: Don't display NULL as default value (regression from 5.0.0)
